* added "refreshHomeOnConnectFailure" to AbstractRemoteSlsbInvokerInterceptor, for automatic retry if connect failed
* changed AbstractRemoteSlsbInvokerInterceptor's abstract method to "doInvoke" (warning: not backwards-compatible!)
* factored out "getSessionBeanInstance" and "releaseSessionBeanInstance" methods in SimpleRemoteSlsbInvokerInterceptor

Package org.springframework.jdbc
* StatementCreatorUtils uses specific PreparedStatement parameter setter methods, as far as possible
* added auto-conversion of java.util.Calendar to java.sql.Date/Time/Timestamp, for SQL types DATE/TIME/TIMESTAMP
* added auto-conversion of java.util.Date and java.util.Calendar to java.sql.Timestamp, in case of an unknown SQL type
* DataSourceTransactionObject implements the SmartTransactionObject interface, exposing an "isRollbackOnly" method
* added support for WebSphere 4 to WebSphereNativeJdbcExtractor, auto-detecting WebSphere 5 and 4 now

Package org.springframework.jms
* JmsTransactionObject implements the SmartTransactionObject interface, exposing an "isRollbackOnly" method
* reworked DynamicDestinationResolver to work with both JMS 1.1 and JMS 1.0.2
* reworked JndiDestinationResolver to delegate for dynamic destinations, by default to a DynamicDestinationResolver
* added "cache" flag to JndiDestinationResolver, to allow for turning off the caching of Destination objects from JNDI
* added support for ObjectMessage to SimpleMessageConverter, converting between Serializable objects and ObjectMessages

Package org.springframework.jndi
* added "rebind" operation to JndiTemplate, analogous to the existing "lookup", "bind" and "unbind" operations
* factored out JndiAccessor base class from JndiLocatorSupport, holding "jndiTemplate" and "jndiEnvironment" properties
* deprecated AbstractJndiLocator base class in favor of new JndiObjectLocator base class with explicit "lookup" method